--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -12,7 +12,7 @@
             "justMyCode": true,
             "program": "romix.py",
             "args": ["--dat", "/home/nikoh/Scrivania/romix/DAT/FinalBurnNeoGeo.dat",
-                     "--romset", "/home/nikoh/Scrivania/romix/ROMs",
+                     "--romset", "/home/nikoh/Scrivania/romix/ROMs"
 
                     ]
         }
