--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -11,8 +11,7 @@
             "console": "integratedTerminal",
             "justMyCode": true,
             "program": "romix.py",
-            "args": ["--dat", "/home/nikoh/Scrivania/romix/DAT/FinalBurnNeoGeo.dat",
-                     "--romset", "/home/nikoh/Scrivania/romix/ROMs"
+            "args": ["--dat", "DAT/NintendoSnesNoIntro.dat",
 
                     ]
         }
